--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -56,7 +56,11 @@
                     <div class="mt-3"></div>
                     <div class="form-group">
                         <label for="full-name">Họ và tên</label>
-                        <input type="text" [(ngModel)]="fullName" class="form-control" required id="full-name">
+                        <input type="text" 
+                            [(ngModel)]="fullName" 
+                            name="fullName"
+                            class="form-control" required 
+                            id="full-name">
                         <div class="divider-nospace"></div>
                     </div>
                     <div class="form-group">
@@ -76,13 +80,20 @@
                     <div class="mt-3"></div>
                     <div class="form-group">
                         <label for="address">Địa chỉ</label>
-                        <input type="text" [(ngModel)]="address" class="form-control" id="address">
+                        <input type="text" 
+                            [(ngModel)]="address" 
+                            name="address"
+                            class="form-control" id="address">
                         <div class="divider-nospace"></div>
                     </div>
                     <div class="form-group">
                         <div class="form-check checkbox-text">
                             <span style="display: flex;">
-                                <input type="checkbox" [(ngModel)]="isAccepted" class="form-check-input" id="agree">
+                                <input type="checkbox" 
+                                    [(ngModel)]="isAccepted" 
+                                    name="isAccepted"
+                                    class="form-check-input" 
+                                    id="agree">
                                 <label class="form-check-label text-start" for="agree">
                                     Tôi đồng ý với các điều kiện
                                 </label>
