--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -6,17 +6,17 @@
                 <div class="register-form mx-auto">
                     <h2 class="register-header">Đăng ký</h2>
                     <div class="form-group">
-                        <label for="phone">Phone</label>
+                        <label for="phoneNumber">Phone Number</label>
                         <input type="text" 
                             class="form-control" 
-                            [(ngModel)]="phone" 
-                            (input)="onPhoneChange()" 
+                            [(ngModel)]="phoneNumber" 
+                            (input)="onPhoneNumberChange()" 
                             name="phone"
                             (focus)="registerForm.form.markAsTouched()"
                             required
                             id="phone">
                         <div class="divider-nospace"></div>
-                        <p class="text-danger" *ngIf="phone.length < 6 && registerForm.form.touched">
+                        <p class="text-danger" *ngIf="phoneNumber.length < 6 && registerForm.form.touched">
                             Số điện thoại phải có ít nhất 6 ký tự
                         </p>
                     </div>
