--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -38,12 +38,15 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <select class="form-control access-right">
+                        <select class="form-control access-right"
+                            [(ngModel)]="selectedRole">
                             <option selected disabled>Quyền đăng nhập</option>
-                            <option>Nguời dùng</option>
-                            <option>Quản trị viên</option>
+                            <option *ngFor="let role of roles" [ngValue]="role">
+                                {{ role.name }}
+                            </option>
                         </select>
                     </div>
+                    
                     <button type="button" (click)="login()" class="login-button">Đăng nhập</button>
                     <div class="divider"></div>
                     <p class="text-center">Bạn chưa đăng ký? <span>
