--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -15,6 +15,11 @@
     width: 200px;
 }
 
+.product-category option {
+    background-color: rgb(19, 23, 42);
+    color: white;
+}
+
 .search-input {
     width: 300px;
     background-color: rgb(19, 23, 42);
@@ -85,3 +90,26 @@
 .space-x {
     margin: 0 5px;
 }
+
+.page-number {
+    cursor: pointer;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    margin: 0 2px;
+    border-radius: 3px;
+}
+
+.page-number.active {
+    background-color: rgb(127, 68, 255) !important;
+    color: #fff;
+    border-color: rgb(127, 68, 255) !important;
+}
+
+// .btn-primary {
+//     background-color: rgb(127, 68, 255);
+//     border-color: rgb(127, 68, 255);    
+// }
+
+// .btn.btn-primary {
+//     margin-left: 10px;
+// }
