--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -105,11 +105,11 @@
     border-color: rgb(127, 68, 255) !important;
 }
 
-// .btn-primary {
-//     background-color: rgb(127, 68, 255);
-//     border-color: rgb(127, 68, 255);    
-// }
+.btn-primary {
+    background-color: rgb(127, 68, 255);
+    border-color: rgb(127, 68, 255);    
+}
 
-// .btn.btn-primary {
-//     margin-left: 10px;
-// }
+.btn.btn-primary {
+    margin-left: 10px;
+}
