--- a/src/app/components/admin/order/order.admin.component.html
+++ b/src/app/components/admin/order/order.admin.component.html
@@ -1,6 +1,45 @@
 <div class="container-fluid">
     <h1>Order Admin Page</h1>
-    <table></table>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>User ID</th>
+                <th>Full Name</th>
+                <th>Email</th>
+                <th>Phone Number</th>
+                <th>Address</th>
+                <th>Note</th>
+                <th>Order Date</th>
+                <th>Status</th>
+                <th>Total Money</th>
+                <th>Shipping Method</th>
+                <th>Shipping Address</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let order of orders">
+                <td>
+                    <button (click)="viewDetails(order)" class="btn btn-primary">
+                        View Details
+                    </button>
+                    {{ order.id }}
+                </td>
+                <td>{{ order.user_id }}</td>
+                <td>{{ order.fullname }}</td>
+                <td>{{ order.email }}</td>
+                <td>{{ order.phone_number }}</td>
+                <td>{{ order.address }}</td>
+                <td>{{ order.note }}</td>
+                <td>{{ order.order_date | date }}</td>
+                <td>{{ order.status }}</td>
+                <td>{{ order.total_money }}</td>
+                <td>{{ order.shipping_method }}</td>
+                <td>{{ order.shipping_address }}</td>
+            </tr>
+        </tbody>
+    </table>
     <div class="d-flex justify-content-center">
         <nav aria-label="Page navigation">
             <ul class="pagination">
