--- a/src/app/components/admin/order/order.admin.component.html
+++ b/src/app/components/admin/order/order.admin.component.html
@@ -13,19 +13,12 @@
                 <th>Order Date</th>
                 <th>Status</th>
                 <th>Total Money</th>
-                <th>Shipping Method</th>
-                <th>Shipping Address</th>
                 <th>Action</th>
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let order of orders">
-                <td>
-                    <button (click)="viewDetails(order)" class="btn btn-primary">
-                        View Details
-                    </button>
-                    {{ order.id }}
-                </td>
+                <td>{{ order.user_id }}</td>
                 <td>{{ order.user_id }}</td>
                 <td>{{ order.fullname }}</td>
                 <td>{{ order.email }}</td>
@@ -35,8 +28,14 @@
                 <td>{{ order.order_date | date }}</td>
                 <td>{{ order.status }}</td>
                 <td>{{ order.total_money }}</td>
-                <td>{{ order.shipping_method }}</td>
-                <td>{{ order.shipping_address }}</td>
+                <td>
+                    <div style="display: flex; gap: 10px;">
+                        <button (click)="viewDetails(order)" class="btn btn-primary">
+                            View Details
+                        </button>
+                        <button class="btn btn-danger" (click)="deleteOrder(order.id)">Delete</button>
+                    </div>
+                </td>
             </tr>
         </tbody>
     </table>
