--- a/src/app/components/detail-product/detail-product.component.html
+++ b/src/app/components/detail-product/detail-product.component.html
@@ -41,7 +41,8 @@
             <div class="product-details">
                 <h2>{{ product?.name }}</h2>
                 <p>{{ product?.description }}</p>
-                <p>Giá: ${{ product?.price }}</p>
+                <p>Giá: {{ product?.price | currency:'VND':'symbol':'1.0-0':'vi' }}</p>
+                <p>Tổng tiền: {{ getTotalPrice() | currency:'VND':'symbol':'1.0-0':'vi' }}</p>
                 <div class="product-actions">
                     <button class="btn btn-primary" (click)="addToCart()">Thêm vào giỏ hàng</button>
                     <button class="btn btn-success" (click)="buyNow()">Mua ngay</button>
