--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row footer-description">
                 <div class="col-md-6">
-                    <p>&copy; 2023 Your Company. All rights reserved.</p>
+                    <p>&copy; 2025 MPEC. All rights reserved.</p>
                 </div>
                 <div class="col-md-6">
                     <p class="text-end">Terms of Service | Privacy Policy</p>
