--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -23,7 +23,8 @@
                             name="password"
                             placeholder="Ít nhất 3 ký tự" 
                             class="form-control" id="password">
-                        <i class="password-toggle fas fa-eye-slash"></i>
+                        <i class="password-toggle fas" [ngClass]="showPassword ? 
+                            'fa-eye' : 'fa-eye-slash'" (click)="togglePassword()"></i>
                         <div class="divider-nospace"></div>
                     </div>
                     <div class="form-group">
@@ -50,7 +51,7 @@
                     <button type="button" (click)="login()" class="login-button">Đăng nhập</button>
                     <div class="divider"></div>
                     <p class="text-center">Bạn chưa đăng ký? <span>
-                        <a href="#" class="register-link">Tạo tài khoản</a>
+                        <a class="register-link" (click)="createAccount()">Tạo tài khoản</a>
                     </span></p>
                 </div>
             </div>
