--- a/src/app/components/order/order.component.scss
+++ b/src/app/components/order/order.component.scss
@@ -63,9 +63,42 @@ th, td {
     margin-right: 10px;
 }
 
+.product-quantity {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-top: 10px;
+}
+
+.product-quantity button {
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.product-quantity input {
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-size: 16px;
+    text-align: center;
+    width: 40px;
+    margin: 0 10px;
+}
+
+.product-quantity input:focus {
+    outline: none;
+}
+
 .btn-gradient {
     background: linear-gradient(to right, rgb(225, 64, 180), rgb(126, 43, 237));
     color: white;
     border-radius: 30px;
     width: 200px;
+}
+
+.border-wrapper {
+    border: 1px solid white;
 }
