--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -23,31 +23,32 @@
                     <div class="mt-3"></div>
                     <div class="form-group password-field">
                         <label for="password">Mật khẩu</label>
-                        <input type="password" [(ngModel)]="password" 
-                            placeholder="Ít nhất 3 ký tự" 
+                        <input [type]="showPassword ? 'text' : 'password'"
+                            [(ngModel)]="password"
+                            name="password" 
+                            (input)="registerForm.form.markAsTouched(); checkPasswordsMatch()"
+                            placeholder="Ít nhất 3 ký tự" required
                             class="form-control"
-                            name="password"
                             id="password">
-                        <i class="password-toggle fas fa-eye-slash"></i>
+                        <i class="password-toggle fas" [ngClass]="showPassword ? 
+                            'fa-eye' : 'fa-eye-slash'" (click)="togglePassword()"></i>
                         <div class="divider-nospace"></div>
                         <p class="text-danger" *ngIf="password.length < 3 && registerForm.form.touched">
                             Mật khẩu phải có ít nhất 3 ký tự
                         </p>
-                    </div>
+                    </div>  
                     <div class="mt-3"></div>
                     <div class="form-group password-field">
                         <label for="retype-password">Gõ lại mật khẩu</label>
-                        <input type="password" 
+                        <input [type]="showPassword ? 'text' : 'password'" 
                             placeholder="Ít nhất 3 ký tự" 
                             [(ngModel)]="retypePassword" required
                             name="retypePassword"
                             (input)="registerForm.form.markAsTouched(); checkPasswordsMatch()"
                             class="form-control" id="retype-password">
-                        <i class="password-toggle fas fa-eye-slash"></i>
+                        <i class="password-toggle fas" [ngClass]="showPassword ? 
+                            'fa-eye' : 'fa-eye-slash'" (click)="togglePassword()"></i>
                         <div class="divider-nospace"></div>
-                        <p class="text-danger" *ngIf="retypePassword.length < 3 && registerForm.form.touched">
-                            Mật khẩu phải có ít nhất 3 ký tự
-                        </p>
                         <p class="text-danger" 
                             *ngIf="registerForm.controls['retypePassword'].hasError('passwordMismatch') && registerForm.form.touched">
                             Mật khẩu không khớp
