--- a/src/app/components/admin/admin.component.scss
+++ b/src/app/components/admin/admin.component.scss
@@ -12,7 +12,7 @@
 }
 
 #sidebar {
-    background-color: #007bff;
+    background-color: #007bff !important;
     color: white;
     height: 100vh;
     overflow-y: auto;
